--- a/units/aird.service
+++ b/units/aird.service
@@ -2,8 +2,8 @@
 Description=air heat and wetness demon
 
 [Service]
-User=ted
-ExecStart=/home/ted/code/science-daemons/aird
+User=science
+ExecStart=/home/science/code/science-daemons/aird
 KillMode=process
 Restart=on-failure
 
