--- a/units/lightd.service
+++ b/units/lightd.service
@@ -2,8 +2,8 @@
 Description=science light daemon
 
 [Service]
-User=ted
-ExecStart=/home/ted/code/science-daemons/lightd
+User=science
+ExecStart=/home/science/code/science-daemons/lightd
 ExecStopPost=/usr/bin/gpio write 7 0
 KillMode=process
 Restart=on-failure
